[metadata]
name = rex-py
description = rex: Reactive Exchange Python API
long_description = file: README.md
version = 0.0.1
url = https://www.reactiveexchange.com
project_urls =
    Source=https://github.com/reactiveexchange/rex-python
    Tracker=https://github.com/reactiveexchange/rex-python/issues
author = Reactive Exchange
maintainer = Fan Zhao
author-email = development@reactiveexchange.com
long_description_content_type = text/markdown
keywords = reactive exchange
license = Apache
license_file = LICENSE
classifiers =
        # Classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 5 - Production/Stable
        Intended Audience :: End Users/Desktop
        License :: Apache license
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Utilities
platforms = any

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    pytz
    requests

zip_safe = False
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    pylint
    tox

[options.package_data]
* = *.txt, *.rst

[flake8]
max-line-length = 100
exclude = .git
ignore = E402, W503, W504
