[metadata]
name = reactive-platform
description = reactive-platform: Reactive Platform Python API
long_description = file: README.md
version = 0.0.1
url = https://www.reactiveexchange.com
project_urls =
    Source=https://github.com/reactivemarkets/platform-py
    Tracker=https://github.com/reactivemarkets/platform-py/issues
author = Reactive Platform
maintainer = Fan Zhao
author-email = development@reactiveexchange.com
long_description_content_type = text/markdown
keywords = reactive platform
license = Apache
license_file = LICENSE
classifiers =
        # Classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Utilities
platforms = any

[options]
python_requires = >=3.7
install_requires =
    reactive-papi==0.7.0
    flatbuffers>=1.12
    pytz==2020.1
    requests==2.23.0
    urllib3>=1.25.2,<1.26
    websockets==8.1
    numpy>=1.15.4
    pandas==1.0.3

zip_safe = False
include_package_data = True
package_dir =
    = src

[options.extras_require]
testing =
    reactive-papi==0.7.0
    pytest
    pytest-cov
    flake8
    tox
    numpy>=1.15.4

[options.package_data]
* = *.txt, *.rst

[flake8]
max-line-length = 100
exclude = .git
ignore = E402, W503, W504
